[package]
name = "block"
version = "0.1.0"
authors = ["Kevin Nause <kevin@nause.engineering>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dirs = "3.0"
env_logger = "0.8"
git2 = "0.13"
log = "0.4"

[dependencies]
bincode = "1.3"
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.8"