[package]
name = "block"
version = "0.1.0"
authors = ["Kevin Nause <kevin@nause.engineering>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
cfg-if = "1.0"
global_counter = "0.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.8"